Bug 1051636 - Don't mark video ImageLayers as opaque. r=tn, a=lmandel

The visible region of the layer is not necessarily restricted to the image
that is will be rendered.

Also, we don't know for sure an opaque video frame is going to appear.